Bugfix: the icons in the buttons have a too high line height.

--- a/less/widgets/buttons.less
+++ b/less/widgets/buttons.less
@@ -79,7 +79,7 @@ a.link-button,
 	&:after {
 		margin: 0;
 		font-size: 1.5em;
-		line-height: 48px;
+		line-height: 1em;
 		font-weight: 400;
 	}
 	&:before {
